Enable content script in all frames

--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,8 @@
         "https://www.crunchyroll.com/*",
         "*://*/*"
       ],
-      "js": ["src/contentScript.js"]
+      "js": ["src/contentScript.js"],
+      "all_frames": true
     }
   ]
 }
