Add keyboard shortcut command for PiP

--- a/manifest.json
+++ b/manifest.json
@@ -28,5 +28,15 @@
       "js": ["src/contentScript.js"],
       "all_frames": true
     }
-  ]
+  ],
+
+  "commands": {
+    "trigger-pip": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+P",
+        "mac": "Command+Shift+P"
+      },
+      "description": "Trigger Picture-in-Picture on the active tab"
+    }
+  }
 }
