--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,22 @@
 {
   "manifest_version": 3,
   "name": "PiP Anywhere",
-  "description": "Force Picture-in-Picture mode on YouTube, Crunchyroll, and other video sites.",
+  "description": "Force Picture-in-Picture mode on YouTube, Crunchyroll, and user-approved sites.",
   "version": "1.0.0",
 
   "action": {
     "default_title": "Enable Picture-in-Picture"
   },
 
+  "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
+
   "permissions": [
     "activeTab",
-    "scripting",
     "tabs"
   ],
 
@@ -22,11 +28,9 @@
     {
       "matches": [
         "https://www.youtube.com/*",
-        "https://www.crunchyroll.com/*",
-        "*://*/*"
+        "https://www.crunchyroll.com/*"
       ],
-      "js": ["src/contentScript.js"],
-      "all_frames": true
+      "js": ["src/contentScript.js"]
     }
   ],
 
