--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "PiP Anywhere",
-  "description": "Force Picture-in-Picture mode on YouTube, Crunchyroll, and user-approved sites.",
-  "version": "1.0.0",
+  "description": "One-click Picture-in-Picture on any website with a video. Works wherever the browser allows — no fixed site list required.",
+  "version": "2.0.0",
 
   "action": {
     "default_title": "Enable Picture-in-Picture"
@@ -29,6 +29,7 @@
       "matches": [
         "https://www.youtube.com/*",
         "https://www.crunchyroll.com/*"
+        "https://www.netflix.com/*"
       ],
       "js": ["src/contentScript.js"]
     }
