Add 'all_frames' property to content script
Re-added 'all_frames' property as removing it broke crunchyroll support.

--- a/manifest.json
+++ b/manifest.json
@@ -31,7 +31,8 @@
         "https://www.crunchyroll.com/*",
         "https://www.netflix.com/*"
       ],
-      "js": ["src/contentScript.js"]
+      "js": ["src/contentScript.js"],
+      "all_frames": true
     }
   ],
 
