--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,10 @@
     "tabs"
   ],
 
+  "host_permissions": [
+    "*://*/*"
+  ],
+
   "background": {
     "service_worker": "src/background.js"
   },
