--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,8 @@
 {
   "manifest_version": 3,
   "name": "PiP Anywhere",
-  "description": "Force Picture-in-Picture on the main video of the current page wherever the browser allows it.",
-  "version": "3.1.0",
-
-  "action": {
-    "default_title": "Enable Picture-in-Picture"
-  },
+  "description": "Watch video in Picture-in-Picture on any site. Automatically picks the main visible video on the page.",
+  "version": "3.2.0",
 
   "icons": {
     "16": "icons/icon16.png",
@@ -15,14 +11,20 @@
     "128": "icons/icon128.png"
   },
 
+  "action": {
+    "default_title": "Enable Picture-in-Picture",
+    "default_icon": {
+      "16": "assets/icon16.png",
+      "48": "assets/icon48.png"
+    }
+  },
+
   "background": {
     "service_worker": "background.js"
   },
 
   "permissions": [
-    "scripting",
-    "tabs",
-    "activeTab"
+    "scripting"
   ],
 
   "host_permissions": [
